--- a/main.css
+++ b/main.css
@@ -1,9 +1,17 @@
 body {
-    background-color: #ffa;
+    background-color: #010CFC;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 700px;
+    padding: 7px
 }
 
 h1 {
-    color: #880000;
+  border: 5px solid #4FFF12
+  border:20px 0 20px 0;
+  text-align: center;
+    color: #4FFF12;
+  border-style: solid;
 }
 
 h2 {
@@ -11,5 +19,7 @@ h2 {
 }
 
 p {
-
+line-height: 1.6;
+}
+img {max-width: 100%;
 }
